--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ jobs:
       with:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEYID}}
         aws-secret-access-key-id: ${{secrets.AWS_SECRETACCESS_KEYID}}
+        aws-region: ${{ vars.AWS_REGION}}
     - name: Deploy static Html website on s3 bucket
       run: aws s3 sync . s3://${{ vars.S3_BUCKET_NAME }}  --delete
